# docstrange

./: .dockerignore  .gitignore  ARCHITECTURE_COMPARISON.md  CHECKLIST.md  CLAUDE.md  DOCKER.md  DOCS_README.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_RECOMMENDATIONS.md  QUICKSTART-DOCKER.md  README.md  cloud_test_results.json  debug_ocr.py  docker-compose.yml  example.py  pyproject.toml  setup_dev.py  setup_environment.sh  simple_test.py  test_cloud_mode.py  test_docker.sh  test_enhanced_pdf_processor.py  test_pytesseract.py  test_real_files.py
docstrange/: __init__.py  cli.py  extractor.py  web_app.py
docstrange/pipeline/: model_downloader.py
docstrange/processors/: cloud_processor.py  gpu_processor.py  image_processor.py  pdf_processor.py
docstrange/static/: script.js  styles.css
docstrange/templates/: index.html
docstrange/utils/: gpu_utils.py
examples/: basic_usage.py  comprehensive_demo.py  llm_integration.py  test.py
llm_converter/: __init__.py  cli.py  config.py  converter.py  result.py
llm_converter/pipeline/: model_downloader.py  neural_document_processor.py  ocr_service.py
llm_converter/processors/: __init__.py  base.py  cloud_processor.py  docx_processor.py  excel_processor.py  gpu_processor.py  html_processor.py  image_processor.py  pdf_processor.py  pptx_processor.py  txt_processor.py  url_processor.py
llm_converter/services/: ocr_service.py  ollama_service.py
llm_converter/utils/: __init__.py
mcp_server_module/: server.py
scripts/: README.md  __init__.py  prepare_s3_models.py  setup_environment.sh
tests/: debug_ocr.py  debug_ocr_provider.py  test_advanced_ocr.py  test_cloud_mode.py  test_converter.py  test_enhanced_layout.py  test_enhanced_library.py  test_enhanced_pdf_processor.py  test_html_generation.py  test_json_structure.py  test_ocr_with_real_image.py  test_real_files.py  test_real_files_enhanced.py  test_real_json_conversion.py
