[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-data-converter"
version = "2.1.0"
description = "Convert any document, text, or URL into LLM-ready data format with advanced intelligent document processing capabilities powered by pre-trained models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nanonets", email = "team@nanonets.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
keywords = ["llm", "document-processing", "document-conversion", "markdown", "pdf", "image-processing", "intelligent-document-processing", "document-understanding"]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=9.0.0",
    "pdf2image>=1.17.0",
    "markdownify>=0.11.6",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "pypandoc>=1.11",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0,<2.0.0",
    "PyMuPDF>=1.23.0",
    "docling-ibm-models>=0.1.0",
    "easyocr>=1.7.0",
    "huggingface_hub>=0.23.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.scripts]
llm-converter = "llm_converter.cli:main"

[project.urls]
Homepage = "https://github.com/nanonets/llm-data-converter"
Repository = "https://github.com/nanonets/llm-data-converter"
Documentation = "https://github.com/nanonets/llm-data-converter#readme"
Issues = "https://github.com/nanonets/llm-data-converter/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_converter"]

[tool.hatch.build.targets.sdist]
include = [
    "/llm_converter",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 